Twitch login / callback

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<main class="theme-dark">
+<main class="theme-dark" [class.d-none]="layoutDisabled">
 
 	<div class="app-content h-100">
 		<app-navigation></app-navigation>
