--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
 
 		<!-- Display Brwowser Downloads -->
 		<span class="d-flex flex-row browser-downloads">
-			<div matRipple class="browser-icon" *ngFor="let icon of browserIcons" [matTooltip]="'Install on ' + icon.icon">
+			<div [@browserIcon] matRipple [matRippleCentered]="true" [matRippleUnbounded]="true" [matRippleRadius]="8 * 6" class="browser-icon" *ngFor="let icon of browserIcons" [matTooltip]="'Install on ' + icon.icon">
 				<mat-icon [style.transform]="'scale(2)'" [svgIcon]="icon.icon">
 
 				</mat-icon>
