--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -72,3 +72,27 @@
 
 	}
 }
+
+.signed-in-user {
+	span {
+		font-size: .75em;
+	}
+	
+
+	.signed-in-avatar {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-color: currentColor;
+		border-style: solid;
+		border-width: 1px;
+		border-radius: 50%;
+		height: 32px;
+		width: 32px;
+	
+		img {
+			height: 75%;
+			width: 75%;
+		}
+	}
+}
