Emotes List Layout

--- a/src/app/util/twitch-button/twitch-button.component.html
+++ b/src/app/util/twitch-button/twitch-button.component.html
@@ -3,7 +3,7 @@
 		<div class="twitch-icon">
 			<mat-icon svgIcon="twitch"></mat-icon>
 		</div>
-		<span class="mx-1">Sign In</span>
+		<span class="mx-1">SIGN IN</span>
 	</div>
 	
 </div>
