--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 
 <main class="theme-dark" [class.d-none]="layoutDisabled">
 
-	<div class="app-content h-100">
-		<app-navigation></app-navigation>
-
+	<app-navigation></app-navigation>
+	<div class="app-content">
 		<div [style.height]="viewportService.getContentHeight('viewport')">
 			<router-outlet></router-outlet>
 		</div>
