--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,11 @@
 main {
-	width: 100%;
-	height: 100%;
+	display: block;
 	overflow: hidden;
 }
 
-.app-content {
-	height: calc(100% - 64px);
+.app-content { display: flex; }
+.app-content div {
 	overflow-y: auto;
+	flex: 1 0 auto;
+	// overflow-x: hidden;
 }
