--- a/src/app/emotes/emotes.component.html
+++ b/src/app/emotes/emotes.component.html
@@ -1,4 +1,4 @@
-<div class="emotes container">
+<div class="emotes h-100 container">
 	<div class="row emotes-heading">
 		<!-- Title -->
 		<div class="col-6"></div>
@@ -30,12 +30,14 @@
 
 		<!-- Emote List -->
 		<div class="col emotes-list">
-			<div class="d-flex flex-wrap align-items-start justify-content-center">
-				<app-emote-card *ngFor="let s of test">
+			<div class="d-flex flex-wrap align-items-start justify-content-center" [@emotes]="emotes | async">
+				<div (click)="selectEmote(emoteEl, null)" #emoteEl *ngFor="let s of emotes | async" class="is-emote-card">
+					<app-emote-card>
 
-				</app-emote-card>
+					</app-emote-card>
+				</div>
+
 			</div>
-
 		</div>
 	</div>
 
