--- a/src/app/emotes/emote-card/emote-card.component.scss
+++ b/src/app/emotes/emote-card/emote-card.component.scss
@@ -3,4 +3,8 @@
 	border: groove 1px;
 	border-color: transparent;
 	border-radius: 3px;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
