--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -13,7 +13,7 @@
 				{{envName | uppercase}}.
 			</span>
 			<!-- Dev Stage Indicator -->
-			<span class="text-nowrap _dev-stage-text">{{appService.devStage}}</span>
+			<span class="text-nowrap _dev-stage-text" [class.d-none]="!appService.devStage">{{appService.devStage}}</span>
 		</div>
 	</div>
 
