--- a/src/app/emotes/emote-list/emote-list.component.html
+++ b/src/app/emotes/emote-list/emote-list.component.html
@@ -1,7 +1,7 @@
 <div class="col emotes-list">
 	<div class="d-flex flex-wrap align-items-start justify-content-center" [@emotes]="emotes | async">
-		<div (click)="selectEmote(emoteEl, null)" #emoteEl *ngFor="let s of emotes | async" class="is-emote-card">
-			<app-emote-card>
+		<div (click)="selectEmote(emoteEl, null)" #emoteEl *ngFor="let emote of emotes | async" class="is-emote-card">
+			<app-emote-card [emote]="emote">
 
 			</app-emote-card>
 		</div>
