--- a/src/app/emotes/emote-card/emote-card.component.scss
+++ b/src/app/emotes/emote-card/emote-card.component.scss
@@ -5,6 +5,41 @@
 	border-radius: 3px;
 
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+
+	.title-banner {
+		height: 1.5em;
+		width: 100%;
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+
+		span {
+			font-family: 'Ubuntu', sans-serif;
+		}
+
+		&.submitter {
+			width: 80%;
+			border-bottom-left-radius: 8px;
+			border-bottom-right-radius: 8px;
+
+			span { font-size: .75em; }
+		}
+	}
+
+	.img-wrapper {
+		display: flex;
+		justify-content: center;
+		height: 75px;
+
+		img {
+			margin-top: 1em;
+			min-width: 76px;
+			max-width: 55%;
+			object-fit: scale-down;
+		}
+	}
+
 }
