--- a/src/app/emotes/emote-list/emote-list.component.html
+++ b/src/app/emotes/emote-list/emote-list.component.html
@@ -8,7 +8,8 @@
 	</div>
 
 	<mat-paginator (page)="onPageEvent($event)"
-		[length]="totalEmotes | async" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]">
+		[showFirstLastButtons]="true"
+		[length]="totalEmotes | async" [pageSize]="16" [pageSizeOptions]="[8, 16, 32, 64]">
 
 	</mat-paginator>
 </div>
