--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -53,7 +53,7 @@
 				<img [src]="clientService.getAvatarURL() | async">
 			</div>
 			<div class="mx-1"></div>
-			<span>{{this.clientService.getUsername() | async}}</span>
+			<span [appColor]="((clientService.getRank() | async) || 0) >= 1 ? themingService.primary : undefined ">{{this.clientService.getUsername() | async}}</span>
 		</div>
 	</div>
 </mat-toolbar>
