--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,12 @@
-<p>It's a third party thing LULW</p>
+
+<div class="centered">
+
+<p>7tv doesn't practice cancel culture for emotes. We have Zulul, PogChamp and many more!</p> 
+<p>You can upload your emotes and add them to your channel. As long as it is TOS friendly</p>
+
+<a href="https://github.com/SevenTV">Help contribute on GitHub!</a>
+
+<p>
+    <code>It's a third party thing LULW</code>
+</p>
+</div>
