Avatar fix + tag system start
Avatar of the user now fits in the circle border

Tag system is ready to be connected to the api

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -89,10 +89,12 @@
 		border-radius: 50%;
 		height: 32px;
 		width: 32px;
+		
 	
 		img {
-			height: 75%;
-			width: 75%;
+			height: 100%;
+			width: 100%;
+			clip-path: circle(15px at center);
 		}
 	}
 }
