--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -50,7 +50,7 @@
 		<!-- Display Auth user -->
 		<div class="signed-in-user d-flex flex-row align-items-center" *ngSwitchCase="true">
 			<div class="signed-in-avatar" [appColor]="themingService.bg.lighten(.1)" [isBackground]="true">
-				<img [src]="clientService.getAvatarURL() | async">
+				<img id="ava" [src]="clientService.getAvatarURL() | async">
 			</div>
 			<div class="mx-1"></div>
 			<span [appColor]="((clientService.getRank() | async) || 0) >= 1 ? themingService.primary : undefined ">{{this.clientService.getUsername() | async}}</span>
