--- a/src/app/emotes/emote/emote.component.html
+++ b/src/app/emotes/emote/emote.component.html
@@ -32,6 +32,9 @@
 	</div>
 	<div class="my-2"></div>
 
+	<!-- Tags -->
+	<app-tag-system [emote]="emote"></app-tag-system>
+
 	<!-- Interactions -->
 	<div class="d-flex flex-column p-2" [appColor]="themingService.bg.darken(.075)" [isBackground]="true">
 		<h3>Manage Emote</h3>
