--- a/src/app/util/tag-system/tag-system.component.html
+++ b/src/app/util/tag-system/tag-system.component.html
@@ -1,15 +1,17 @@
 <!--Testing showing tags-->
-<div id="tagList"> 
-  
+Tags
+<div  id="tagList">
+<span class="tag" *ngFor="let tag of emote?.getTags() | async">
+  {{tag}}
+  </span>
 </div>
 
 
-
-
 <!--Testing adding tags-->
-
+<!--
 <div id="tagArea">
   <span class="tag">Tag</span>
   <input type="text" id="addATag" name="addTags">
   
 </div>
+-->
