EmoteComponent - add open animation

--- a/src/app/emotes/emote/emote.component.html
+++ b/src/app/emotes/emote/emote.component.html
@@ -1,4 +1,4 @@
-<div class="container p-2 h-100">
+<div class="container p-2 h-100" [@open]>
 	<!-- Heading -->
 	<div class="w-100 p-2 mat-elevation-z2 d-inline-flex justify-content-between" [appColor]="themingService.bg.darken(.2)" [isBackground]="true">
 		<!-- Emote Name / Back arrow -->
