--- a/src/app/emotes/emote-card/emote-card.component.html
+++ b/src/app/emotes/emote-card/emote-card.component.html
@@ -1,8 +1,9 @@
-<div class="emote-card mat-elevation-z2" matRipple [@hovering]="{ value: hover | async, params: { borderColor: borderColor } }"
+<div class="emote-card mat-elevation-z2" matRipple [@hovering]="{ value: hover | async, params: { borderColor: emote?.global ? globalBorderColor : borderColor } }"
 	[style.height.em]="size"
 	[style.width.em]="size"
-	[style.border-color]="borderColor"
-	[appColor]="themingService.bg.darken(.1)" [isBackground]="true">
+	[appColor]="themingService.bg.darken(.1)" [isBackground]="true"
+	[class.global]="emote?.global"
+	[class.hovering]="hover | async">
 
 	<div class="title-banner" [appColor]="themingService.bg.alpha(.4).lighten(.7)" [isBackground]="true">
 		<span class="text-truncate px-2" [matTooltip]="getTooltip()" matTooltipPosition="above"> {{emote?.name}} </span>
@@ -13,5 +14,12 @@
 
 	<div class="img-wrapper">
 		<img [src]="getEmoteURL()">
+	</div>
+</div>
+
+<!-- Global Emote Indicator -->
+<div class="d-flex justify-content-center global-indicator" *ngIf="emote?.global" [matTooltip]="'Global Emote'">
+	<div class="d-inline-flex justify-content-center align-items-center" [appColor]="themingService.bg.darken(.1)" [isBackground]="true">
+		<mat-icon [appColor]="globalBorderColor">star</mat-icon>
 	</div>
 </div>
