--- a/src/app/emotes/emote-list/emote-list.component.html
+++ b/src/app/emotes/emote-list/emote-list.component.html
@@ -1,15 +1,24 @@
 <div class="col p-2 emotes-list">
 	<div class="d-flex flex-wrap align-items-start justify-content-center" [@emotes]="emotes | async" [appColor]="themingService.bg.lighten(.18)" [isBackground]="true">
-		<div (click)="selectEmote(emoteEl, emote)" #emoteEl *ngFor="let emote of emotes | async" class="is-emote-card">
-			<app-emote-card [emote]="emote">
+		<div (click)="selectEmote(emoteEl, emote)"  #emoteEl *ngFor="let emote of emotes | async" class="is-emote-card">
+			<app-emote-card [emote]="emote" [contextMenu]="emoteContextMenu" (openContext)="contextEmote = $event">
 
 			</app-emote-card>
 		</div>
 	</div>
 
 	<mat-paginator #paginator (page)="onPageEvent($event)" [@fadeout]="selecting | async"
-		[showFirstLastButtons]="true"
+		[showFirstLastButtons]="true" [pageIndex]="pageOptions?.page" [length]="pageOptions?.length"
 		[length]="totalEmotes | async" [pageSize]="16" [pageSizeOptions]="[8, 16, 32, 64]">
 
 	</mat-paginator>
 </div>
+
+<mat-menu #emoteContextMenu="matMenu">
+	<ng-template matMenuContent>
+		<button mat-menu-item *ngFor="let opt of contextMenuOptions" (click)="(!!contextEmote && opt.click) ? opt.click(contextEmote) : undefined">
+			<mat-icon> {{opt.icon}} </mat-icon>
+			{{opt.label}}
+		</button>
+	</ng-template>
+</mat-menu>
