--- a/src/app/emotes/emote-card/emote-card.component.scss
+++ b/src/app/emotes/emote-card/emote-card.component.scss
@@ -47,6 +47,19 @@
 		border-bottom: solid 2px;
 	}
 
+	&.ladink {
+		animation-name: ladink;
+		animation-duration: 2s;
+		animation-iteration-count: infinite;
+		animation-fill-mode: forwards;
+	}
+
+}
+
+@keyframes ladink {
+	0% { filter: brightness(1); }
+	50% { filter: brightness(0.8); }
+	100% { filter: brightness(1); }
 }
 
 .global-indicator {
